# win_pirewall

./: .gitignore  README.md  demo.py  hello.py  main.py  nodemon.json  pyproject.toml  watcher.py  window_config.json
resources/: default_window_config.json
src/controllers/: __init__.py  set_lang.py
src/views/: __init__.py  main_window.py
