[project]
name = "win-pirewall"
version = "0.1.0"
description = "Analyze weblogs to filter IPs with specific patterns and add rules to Windows Firewall."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # for GUI
    "dearpygui>=2.0.0",
    # for controll windows firewall
    "pywin32>=308",
]
